[package]
name = "rust-service"
version = "0.1.0"
authors = ["Harm Norden <harm.norden@cofinpro.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[dev-dependencies]
pretty_assertions = "0.6.1"
